<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tv_data_course_thumbnail"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/ic_launcher_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_data_course_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="@color/red_600"
                    android:text="Category"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_data_course_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:layout_marginBottom="8dp"
                    android:textStyle="bold"
                    android:text="@string/course_title"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_data_course_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:layout_marginBottom="8dp"
                    android:textStyle="italic"
                    android:text="@string/rating"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_data_course_modul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_gravity="bottom"
                android:layout_marginRight="16dp"
                android:text="@string/modul"
                android:drawableStart="@drawable/modul" />

            <TextView
                android:id="@+id/tv_data_course_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_gravity="bottom"
                android:gravity="center_vertical"
                android:layout_marginRight="16dp"
                android:text="@string/timer"
                android:drawableStart="@drawable/time" />

            <TextView
                android:id="@+id/tv_data_course_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:layout_gravity="bottom"
                android:layout_marginRight="16dp"
                android:gravity="center_vertical"
                android:text="@string/level"
                android:drawableStart="@drawable/level" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_data_course_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            android:text="@string/course_detail" />

        <Button
            android:id="@+id/tv_data_course_btn_favorite"
            android:text="@string/favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp" />
    </LinearLayout>
</ScrollView>